hlsdemux: Don't send flush events to deactivated pads

https://bugzilla.gnome.org/show_bug.cgi?id=736012